...
//         disabled={!postValidity || loadingCreateAndUpdatePostDraft}
//         onPressRight={doneCreatePost}
//       />
//     );
//
//   return (
//     <SafeAreaView style={styles.container} testID="NewPost:SafeAreaView">
//       <Header />
//       <KeyboardTextAreaScrollView
//         {...kasv.props}
//         bottomMenu={
//           <View>
//             <MentionList
...
//                     }
//                     onChange(text);
//                     debounceSaveDraft();
//                   }}
//                   onFocus={() => setShowLeftMenu(false)}
//                   error={errors.title != null}
//                   testID="NewPost:TextInput:Title"
//                   multiline
//                   textAlignVertical="top"
//                 />
//               )}
//             />
//           </View>
//
//           <View style={[styles.formContainer, styles.row]}>
//             <Text style={styles.label}>{t('类别')}</Text>
//             <TouchableOpacity
//               style={styles.row}
//               onPress={onPressSelectChannel}
//               testID="NewPost:Button:Channel"
//             >
//               <Dot
//                 variant="large"
//                 color={`#${
//                   channels?.find(({ id }) => id === selectedChannel)?.color
//                 }`}
...
//                 }}
//                 onBlur={() => {
//                   setKeyboardShow(false);
//                 }}
//                 style={styles.spacingHorizontal}
//                 mentionToggled={showUserList}
//                 testID="NewPost:TextArea"
//               />
//             )}
//           />
//         </>
//       </KeyboardTextAreaScrollView>
//     </SafeAreaView>
...
