...
    /** 
     * Replace the matched collapsibles with the keyword [collapsible-{index}].
     * We repeat the process again, working on the collapsible one level above the previous iteration,
     * until we reached the most outer level of the collapsible.
     * 
     * Ex:
     * -> Before: [details="Outer collapsible"]
                  [details="Inner collapsible"]
                  [details="Collapsible"]
                  Content
                  [/details]
                  [/details]
                  [/details]
     * -> 1st: [details="Outer collapsible"]
...
